# test_unit_project

./: Dockerfile  README.html  README.md  docker-compose.yml  download_coppelia.sh  html_conversion.py  index.html  install.sh
cr_action_servers/: CMakeLists.txt  Doxyfile  mainpage.md  package.xml
cr_action_servers/config/: pick_params.yaml  place_params.yaml
cr_action_servers/docs/html/: action__servers_8launch_8py.html  annotated.html  classcr_1_1action__servers_1_1PickActionServer-members.html  classcr_1_1action__servers_1_1PickActionServer.html  classcr_1_1action__servers_1_1PickActionServer__coll__graph.map  classcr_1_1action__servers_1_1PickActionServer__inherit__graph.md5  classcr_1_1action__servers_1_1PickActionServer_a0102e12efef2e1ce416d4f02250f9001_icgraph.map  classcr_1_1action__servers_1_1PickActionServer_a0102e12efef2e1ce416d4f02250f9001_icgraph.md5  classcr_1_1action__servers_1_1PickActionServer_a02c0da5cf6c5874d1798be9b9188e96b_icgraph.map  classcr_1_1action__servers_1_1PickActionServer_a02c0da5cf6c5874d1798be9b9188e96b_icgraph.md5  classcr_1_1action__servers_1_1PickActionServer_a03b658de45dded4dfa5e616297997edd_icgraph.map  classcr_1_1action__servers_1_1PickActionServer_a03b658de45dded4dfa5e616297997edd_icgraph.md5  classcr_1_1action__servers_1_1PickActionServer_a053db1dd1f119729939578dbc93a7eef_cgraph.map  classcr_1_1action__servers_1_1PickActionServer_a053db1dd1f119729939578dbc93a7eef_cgraph.md5  classcr_1_1action__servers_1_1PickActionServer_a053db1dd1f119729939578dbc93a7eef_icgraph.map  classcr_1_1action__servers_1_1PickActionServer_a053db1dd1f119729939578dbc93a7eef_icgraph.md5  classcr_1_1action__servers_1_1PickActionServer_a2443a6a4645702e196dc55ac95b3a9ae_icgraph.map  classcr_1_1action__servers_1_1PickActionServer_a2443a6a4645702e196dc55ac95b3a9ae_icgraph.md5  classcr_1_1action__servers_1_1PickActionServer_a295b5ed19bafc461ff3f0973105eff7b_cgraph.map  classcr_1_1action__servers_1_1PickActionServer_a295b5ed19bafc461ff3f0973105eff7b_cgraph.md5  classcr_1_1action__servers_1_1PickActionServer_a35300c88be6de785fe9c0a623ec6a1ce_icgraph.map  classcr_1_1action__servers_1_1PickActionServer_a35300c88be6de785fe9c0a623ec6a1ce_icgraph.md5  classcr_1_1action__servers_1_1PickActionServer_a3b50df4839ee937d18d633afb0e19d85_cgraph.map  classcr_1_1action__servers_1_1PickActionServer_a3b50df4839ee937d18d633afb0e19d85_cgraph.md5  classcr_1_1action__servers_1_1PickActionServer_a3b50df4839ee937d18d633afb0e19d85_icgraph.map  classcr_1_1action__servers_1_1PickActionServer_a3b50df4839ee937d18d633afb0e19d85_icgraph.md5  classcr_1_1action__servers_1_1PickActionServer_ab6611f8c58ae5626653d0b8fad10216c_icgraph.map  classcr_1_1action__servers_1_1PickActionServer_ab6611f8c58ae5626653d0b8fad10216c_icgraph.md5  classcr_1_1action__servers_1_1PickActionServer_acd11058fa0e2397c2268170200e43af4_icgraph.map  classcr_1_1action__servers_1_1PickActionServer_acd11058fa0e2397c2268170200e43af4_icgraph.md5  classcr_1_1action__servers_1_1PlaceActionServer-members.html  classcr_1_1action__servers_1_1PlaceActionServer.html  classcr_1_1action__servers_1_1PlaceActionServer__coll__graph.map  classcr_1_1action__servers_1_1PlaceActionServer__coll__graph.md5  classcr_1_1action__servers_1_1PlaceActionServer_a0e4c90ce23a2cf8aaf034f63ff70e322_icgraph.map  classcr_1_1action__servers_1_1PlaceActionServer_a0e4c90ce23a2cf8aaf034f63ff70e322_icgraph.md5  classcr_1_1action__servers_1_1PlaceActionServer_a1f9fe7d2fa17b04ef23dba9169c8ed2d_cgraph.map  classcr_1_1action__servers_1_1PlaceActionServer_a1f9fe7d2fa17b04ef23dba9169c8ed2d_cgraph.md5  classcr_1_1action__servers_1_1PlaceActionServer_a1f9fe7d2fa17b04ef23dba9169c8ed2d_icgraph.map  classcr_1_1action__servers_1_1PlaceActionServer_a1f9fe7d2fa17b04ef23dba9169c8ed2d_icgraph.md5  (+67 more)
cr_action_servers/include/cr_action_servers/: pick_action_server.hpp  place_action_server.hpp
cr_action_servers/launch/: action_servers.launch.py
cr_action_servers/src/: pick_action_server.cpp  pick_action_server_main.cpp  place_action_server.cpp  place_action_server_main.cpp
cr_bringup/: CMakeLists.txt  package.xml
cr_bringup/cr_bringup/: emergency_stop_node.py
cr_bringup/launch/: emergency_stop_controller.launch.py  system_bringup.launch.py
cr_hw_configuration/: CMakeLists.txt  Doxyfile  coppelia_description.xml  mainpage.md  package.xml
cr_hw_configuration/docs/html/: annotated.html  classcr__hw__configuration_1_1CoppeliaSimHardwareInterface-members.html  classcr__hw__configuration_1_1CoppeliaSimHardwareInterface.html  classes.html  files.html  (+39 more)
cr_hw_configuration/launch/: ur_lab_viewer.launch.py
cr_hw_configuration/rviz/: default.rviz
cr_hw_configuration/src/: coppelia_sim_hardware_interface.cpp
cr_hw_configuration/test/: test_load_coppelia_sim_hardware_interface.cpp
cr_hw_configuration/urdf/: ur5e.urdf  ur5e_with_robotiq85.urdf  ur5e_with_robotiq85.xacro
cr_interfaces/: CMakeLists.txt  Doxyfile  mainpage.md  package.xml
cr_interfaces/action/: ExecuteWorkflow.action  Pick.action  Place.action
cr_interfaces/msg/: DetectedObjects.msg  DetectedSurfaces.msg  FreezeScene.msg  ObjectDetectionBox.msg  ObjectDetectionResult.msg  ObjectInfo.msg  SegmentationResult.msg
cr_interfaces/srv/: AllowCollision.srv  AttachObject.srv  GetObjectInfo.srv
cr_scene_management/: CMakeLists.txt  Doxyfile  mainpage.md  package.xml
cr_scene_management/launch/: scene_management.launch.py
cr_scene_management/src/: planning_scene_modifier.cpp  scene_manager.cpp  static_scene_publisher.cpp
cr_task_orchestration/: CMakeLists.txt  Doxyfile  mainpage.md  package.xml
cr_task_orchestration/launch/: task_orchestrator.launch.py
cr_task_orchestration/src/: task_orchestrator.cpp  task_orchestrator_main.cpp
cr_vision/: CMakeLists.txt  Doxyfile  mainpage.md  package.xml
cr_vision/config/: obj_selection.yaml
cr_vision/cr_vision/: mirror_scena.py  obj_detection.py  obj_selection.py  pose_estimation_person.py
cr_vision/launch/: cr_vision.launch.py
cr_vision/src/: human_proximity_monitor.cpp  human_proximity_monitor_main.cpp  object_state_manager.cpp  object_state_manager_main.cpp
(+626 files in other folders)
