<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cr_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vincosabri@gmail.com">sabri</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>cr_moveit</exec_depend>
  <exec_depend>cr_scene_management</exec_depend>
  <exec_depend>cr_vision</exec_depend>
  <exec_depend>cr_action_servers</exec_depend>
  <exec_depend>cr_task_orchestration</exec_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
